--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.18.0",
-    "vite-plugin-pwa": "^0.16.7"
+    "serve": "^14.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
@@ -35,6 +35,7 @@
     "gh-pages": "^6.0.0",
     "prettier-plugin-organize-imports": "^3.2.3",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "vite-plugin-pwa": "^0.16.7"
   }
 }
